# metea

./: Cargo.toml  README.md  metea-release.keystore  todo.md
.cargo/: config.toml
src/: android_main.rs  app.rs  geocoding.rs  internal_storage.rs  lib.rs  main.rs  storage.rs  weather.rs
