[package]
name = "metea"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
# cdylib is required for Android, lib is required for desktop
crate-type = ["cdylib", "lib"]

[dependencies]
android_logger = "0.15"
log = "0.4"
egui_plot = "0.34"
urlencoding = "2.1"
serde_json = "1"
reqwest = { version = "0.13", features = [ "json", "blocking" ] }
serde = { version = "1", features = [ "derive" ] }
winit = { version = "0.30", default-features = false }
egui = { version = "0.34", default-features = false, features = [ "default_fonts" ] }
eframe = { version = "0.34", default-features = false, features = [ "default_fonts", "glow", "android-native-activity", ] }

[package.metadata.android]
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35

[package.metadata.android.signing.release]
path = "metea-release.keystore"
keystore_password = "password"
key_alias = "release"
key_password = "password"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
