[package]
name = "metea"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
# cdylib is required for Android, lib is required for desktop
crate-type = ["cdylib", "lib"]

[dependencies]
serde_json = "1"
serde = { version = "1", features = [ "derive" ] }

egui_plot = "0.35"
egui = { version = "0.34", default-features = false, features = [ "default_fonts" ] }

log = "0.4"
urlencoding = "2.1"
chrono = { version = "0.4", default-features = false, features = [ "serde" ] }
reqwest = { version = "0.13", features = [ "json", "blocking" ] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.4"
android_logger = "0.15"
eframe = { version = "0.34", default-features = false, features = [ "default_fonts", "glow", "android-native-activity", ] }
winit = { version = "0.30", default-features = false }

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.34", default-features = false, features = [ "wayland", "x11", "glow" ] }
winit = "0.30"

[package.metadata.android]
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35

[package.metadata.android.signing.release]
path = "metea-release.keystore"
keystore_password = "password"
key_alias = "release"
key_password = "password"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
